More alignment fixes

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -108,11 +108,6 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	font-size: 13px;
 }
 
-.reader-post-card__byline .reader-avatar,
-.reader-post-card__byline .site-iconm {
-	margin-right: 6px;
-}
-
 .reader-post-card__author::after {
 	content: ', ';
 }
@@ -163,20 +158,30 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	fill: lighten( $gray, 10% );
 }
 
-.reader-post-card .reader-avatar .gravatar,
-.reader-post-card .reader-avatar .site-icon {
-	float: left;
-	height: 32px;
-	margin: 2px 6px 0 0;
-	vertical-align: text-top;
-	width: 32px;
-}
+.reader-post-card__byline .reader-avatar {
 
-.reader-post-card .reader-avatar .site-icon {
-	width: 32px !important;
-	height: 32px !important;
-	font-size: 32px !important;
-	line-height: 32px !important;
+	&.has-gravatar {
+		margin-right: 6px;
+	}
+
+	.gravatar {
+		float: left;
+		height: 32px;
+		margin: 2px 6px 0 0;
+		vertical-align: text-top;
+		width: 32px;
+	}
+
+	&.has-site-icon {
+		margin: 0 9px 0 -1px;
+	}
+
+	.site-icon {
+		width: 32px !important;
+		height: 32px !important;
+		font-size: 32px !important;
+		line-height: 32px !important;
+	}
 }
 
 .reader-post-card .has-site-and-author-icon .gravatar {
